# ada-mata-mle-test

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  settings.yaml
.github/workflows/: ci.yml  ci_cd.yml
.ipynb_checkpoints/: pyproject-checkpoint.toml
datasets/bottle_cap/: data.yaml
datasets/bottle_cap/train/: labels.cache
datasets/bottle_cap/valid/: labels.cache
notebooks/: .gitignore  01_data_exploration.ipynb  02_model_development.ipynb  development.ipynb
notebooks/Bottle-Cap-Detection/yolo11n_256/: args.yaml  results.csv
notebooks/Bottle-Cap-Detection/yolo11n_320/: args.yaml  results.csv
notebooks/Bottle-Cap-Detection/yolo11n_320_aug/: args.yaml  results.csv
notebooks/Bottle-Cap-Detection/yolo11n_320_fp16/: args.yaml  results.csv
notebooks/Bottle-Cap-Detection/yolo5nu_320/: args.yaml  results.csv
notebooks/Bottle-Cap-Detection/yolov10n_320/: args.yaml  results.csv
notebooks/Bottle-Cap-Detection/yolov8n_256/: args.yaml  results.csv
notebooks/Bottle-Cap-Detection/yolov8n_320/: args.yaml  results.csv
notebooks/Bottle-Cap-Detection/yolov8n_320_aug/: args.yaml  results.csv
notebooks/Bottle-Cap-Detection/yolov8n_320_fp16/: args.yaml  results.csv
notebooks/Bottle-Cap-Detection/yolov8n_640/: args.yaml  results.csv
notebooks/Bottle-Cap-Detection/yolov9t_320/: args.yaml  results.csv
notebooks/Bottle-Cap-Detection/yolov9t_320_aug/: args.yaml  results.csv
notebooks/Bottle-Cap-Detection/yolov9t_320_fp16/: args.yaml  results.csv
notebooks/kfold_configs/: data_fold_0.yaml  train_fold_0.txt  val_fold_0.txt
notebooks/loo_configs/: data_fold_0.yaml  data_fold_1.yaml  data_fold_10.yaml  data_fold_11.yaml  data_fold_2.yaml  data_fold_3.yaml  data_fold_4.yaml  data_fold_5.yaml  data_fold_6.yaml  data_fold_7.yaml  data_fold_8.yaml  data_fold_9.yaml  train_fold_0.txt  train_fold_1.txt  train_fold_10.txt  train_fold_11.txt  train_fold_2.txt  train_fold_3.txt  train_fold_4.txt  train_fold_5.txt  train_fold_6.txt  train_fold_7.txt  train_fold_8.txt  train_fold_9.txt  val_fold_0.txt  val_fold_1.txt  val_fold_10.txt  val_fold_11.txt  val_fold_2.txt  val_fold_3.txt  val_fold_4.txt  val_fold_5.txt  val_fold_6.txt  val_fold_7.txt  val_fold_8.txt  val_fold_9.txt
notebooks/wandb/run-20251122_152459-w3z8tbbh/: run-w3z8tbbh.wandb
notebooks/wandb/run-20251122_205140-15o57pmu/: run-15o57pmu.wandb
notebooks/wandb/run-20251123_115235-26rbo6ae/: run-26rbo6ae.wandb
notebooks/wandb/run-20251123_155612-le1lphuq/: run-le1lphuq.wandb
notebooks/wandb/run-20251123_185749-crd358zu/: run-crd358zu.wandb
notebooks/wandb/run-20251125_091049-97bnxdfm/: run-97bnxdfm.wandb
notebooks/wandb/run-20251125_091533-97bnxdfm/: run-97bnxdfm.wandb
notebooks/wandb/run-20251125_091537-p9b5yfnu/: run-p9b5yfnu.wandb
notebooks/wandb/run-20251125_091822-p9b5yfnu/: run-p9b5yfnu.wandb
notebooks/wandb/run-20251125_091825-ctp5p9pq/: run-ctp5p9pq.wandb
notebooks/wandb/run-20251125_092037-ctp5p9pq/: run-ctp5p9pq.wandb
notebooks/wandb/run-20251125_092041-dgi1ex2v/: run-dgi1ex2v.wandb
notebooks/wandb/run-20251125_092249-dgi1ex2v/: run-dgi1ex2v.wandb
notebooks/wandb/run-20251125_092253-p98elkuu/: run-p98elkuu.wandb
notebooks/wandb/run-20251125_092500-p98elkuu/: run-p98elkuu.wandb
notebooks/wandb/run-20251125_092504-ktthsvkv/: run-ktthsvkv.wandb
notebooks/wandb/run-20251125_092814-ktthsvkv/: run-ktthsvkv.wandb
notebooks/wandb/run-20251125_092818-ewfwac0g/: run-ewfwac0g.wandb
notebooks/wandb/run-20251125_093315-ewfwac0g/: run-ewfwac0g.wandb
notebooks/wandb/run-20251125_093319-48mcxl4v/: run-48mcxl4v.wandb
notebooks/wandb/run-20251125_093811-48mcxl4v/: run-48mcxl4v.wandb
notebooks/wandb/run-20251125_093815-sloxdpqq/: run-sloxdpqq.wandb
src/ada_mata_mle/: main.py
src/ada_mata_mle/.ipynb_checkpoints/: main-checkpoint.py
src/bsort/: __init__.py  infer.py  main.py  train.py  utils.py
tests/: test_infer.py  test_main.py
tests/.ipynb_checkpoints/: test_main-checkpoint.py
(+162 files in other folders)
