[tool.poetry]
name = "ada-mata-mle"
version = "0.1.0"
description = "Bottle Cap Detector"
authors = ["wikan1602 <wikanpriambudi@gmail.com>"]
readme = "README.md"
packages = [{include = "ada_mata_mle", from = "src"}]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# --- SCRIPT CLI ---
[tool.poetry.scripts]
bsort = "ada_mata_mle.main:app"

# --- SOURCE PENTING (CPU ONLY) ---
[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

# --- DEPENDENCIES UTAMA ---
[tool.poetry.dependencies]
python = "^3.11"
opencv-python-headless = "*"
typer = "*"
pyyaml = "*"
wandb = "*"
ultralytics = "*"

# Kunci Diet: Paksa Torch ambil dari link CPU di atas
torch = { version = ">=2.0.0", source = "pytorch-cpu" }
torchvision = { version = ">=0.15.0", source = "pytorch-cpu" }

# --- DEPENDENCIES DEVELOPMENT (TESTING) ---
[tool.poetry.group.dev.dependencies]
pytest = "*"
pylint = "*"
black = "*"
isort = "*"
jupyter = "*"